Regression: Viewport Walk Navigation : mouse escapes window if it moves too fast #102346

Closed
opened 2022-11-08 09:56:01 +01:00 by ChameleonScales · 30 comments

System Information
Operating system:
Linux-5.10.0-19-amd64-x86_64-with-glibc2.31 64 Bits, Debian 11 XFCE
Graphics card: NVIDIA GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.141.03

Blender Version
Broken: versions:
3.4.0 Beta, branch: master, commit date: 2022-11-04 20:01, hash: bba6d28942
3.3.x
Worked: up until 3.2 (included)

Caused by 4c4e8cc926.

Short description of error
While in Walk navigation, if the Blender window doesn't take up all the screen's space (or if used on a dual screen), the mouse cursor will escape it if it moves too fast.
Note: this seems to be related to https://developer.blender.org/T86033. However, the Walk navigation was not affected until Blender 3.3, whereas Grabbing, scaling, etc... were affected since 2.79 if not before or forever.

Exact steps for others to reproduce the error

  • Shrink the Blender window to leave some space on the left side of the screen
  • From Factory settings: View > Navigation > Walk Navigation
  • Move the mouse fast to the left : it escapes the window

Video demonstration comparing between Blender 3.2 and 3.3:
Walk navigation mouse escaping bug0001-0385.mp4

**System Information** Operating system: Linux-5.10.0-19-amd64-x86_64-with-glibc2.31 64 Bits, Debian 11 XFCE Graphics card: NVIDIA GeForce GTX 1660/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.141.03 **Blender Version** Broken: versions: 3.4.0 Beta, branch: master, commit date: 2022-11-04 20:01, hash: `bba6d28942` 3.3.x Worked: up until 3.2 (included) Caused by 4c4e8cc926a672ac60692b3fb8c20249f9cae679. **Short description of error** While in Walk navigation, if the Blender window doesn't take up all the screen's space (or if used on a dual screen), the mouse cursor will escape it if it moves too fast. Note: this seems to be related to https://developer.blender.org/T86033. However, the Walk navigation was not affected until Blender 3.3, whereas Grabbing, scaling, etc... were affected since 2.79 if not before or forever. **Exact steps for others to reproduce the error** - Shrink the Blender window to leave some space on the left side of the screen - From Factory settings: View > Navigation > Walk Navigation - Move the mouse fast to the left : it escapes the window Video demonstration comparing between Blender 3.2 and 3.3: [Walk navigation mouse escaping bug0001-0385.mp4](https://archive.blender.org/developer/F13874636/Walk_navigation_mouse_escaping_bug0001-0385.mp4)

Added subscriber: @ChameleonScales

Added subscriber: @ChameleonScales
ChameleonScales changed title from Viewport Walk Navifation : mouse escapes window if it moves too fast to Viewport Walk Navigation : mouse escapes window if it moves too fast 2022-11-08 10:00:00 +01:00
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Seems similar to #86033 indeed and is a 3.3 regression. Let me know if you want me to bisect.

Seems similar to #86033 indeed and is a 3.3 regression. Let me know if you want me to bisect.

I personally don't know enough to bisect this (I have no C knowledge).
That said I'm thinking if this can be solved for the Walk navigation (which might be the only tool that ever got this working though I haven't tested others thoroughly), this may give pointers to solve it as well for Grab/Scale/Rotate.

I personally don't know enough to bisect this (I have no C knowledge). That said I'm thinking if this can be solved for the Walk navigation (which might be the only tool that ever got this working though I haven't tested others thoroughly), this may give pointers to solve it as well for Grab/Scale/Rotate.
Member

Sorry, that was directed to developers, I was just asking if finding the change that caused this issue would be helpful to them so that I can do it.

Sorry, that was directed to developers, I was just asking if finding the change that caused this issue would be helpful to them so that I can do it.
Omar Emara changed title from Viewport Walk Navigation : mouse escapes window if it moves too fast to Regression: Viewport Walk Navigation : mouse escapes window if it moves too fast 2022-11-08 14:21:34 +01:00
Member

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel
Member

Bisecting this would be useful, yes.

Bisecting this would be useful, yes.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Can confirm in windows OS so definitely not a platform specific(Linux) issue

Worked: up until 3.2

I can even reliably redo the issue in versions prior to 3.2. Unsure if this is a regression

Can confirm in windows OS so definitely not a platform specific(Linux) issue > Worked: up until 3.2 I can even reliably redo the issue in versions prior to 3.2. Unsure if this is a regression

I tested thoroughly on Linux and I confirm that it's impossible to get the mouse to escape the Blender window on 3.2.
Maybe Windows 11 introduced this problem? (the other bug report was posted before Win 11 was out)

I tested thoroughly on Linux and I confirm that it's impossible to get the mouse to escape the Blender window on 3.2. Maybe Windows 11 introduced this problem? (the other bug report was posted before Win 11 was out)
Member

Hmmm, I can indeed reproduce the issue before 3.2 on Linux, though it is harder to reproduce. So this doesn't seem to be a regression.

Hmmm, I can indeed reproduce the issue before 3.2 on Linux, though it is harder to reproduce. So this doesn't seem to be a regression.
Omar Emara changed title from Regression: Viewport Walk Navigation : mouse escapes window if it moves too fast to Viewport Walk Navigation : mouse escapes window if it moves too fast 2022-11-09 07:47:46 +01:00
Member

Since some users can reproduce that even before 3.2, we should probably merge this to #86033, it seems you already added a note about that there.

Since some users can reproduce that even before 3.2, we should probably merge this to #86033, it seems you already added a note about that there.
Member

Closed as duplicate of #86033

Closed as duplicate of #86033

I'm positive there is a regression but maybe it's also dependent on the window manager or even the OS. I use Debian 11 with XFCE.
On 3.2 I cranked my mouse speed to max level and moved it very fast many times. I really really can't get the navigation to break. In fact I know it's not possible because if I move really fast I see the cursor get out for a split second and immediately disappear. So something is preventing it from escaping for good.
With 3.3 I can even move the mouse very slow when the speed is cranked up and the cursor escapes for good, breaking the navigation.

I think it's worth reopening because the grabbing issue is definitely there on all versions since 2.8.

I'm positive there is a regression but maybe it's also dependent on the window manager or even the OS. I use Debian 11 with XFCE. On 3.2 I cranked my mouse speed to max level and moved it very fast many times. I really really can't get the navigation to break. In fact I know it's not possible because if I move really fast I see the cursor get out for a split second and immediately disappear. So something is preventing it from escaping for good. With 3.3 I can even move the mouse very slow when the speed is cranked up and the cursor escapes for good, breaking the navigation. I think it's worth reopening because the grabbing issue is definitely there on all versions since 2.8.
Member

@ChameleonScales I will consider bisecting anyways to find out why it became easier to escape in 3.3 and reopen in that case.
And to clarify, the task was merged, not closed, so it is still being tracked.

@ChameleonScales I will consider bisecting anyways to find out why it became easier to escape in 3.3 and reopen in that case. And to clarify, the task was merged, not closed, so it is still being tracked.

Ok. I added a video demonstration in the OP.

Ok. I added a video demonstration in the OP.

That said it's not the same bug. The Grab/Rotation/Scale one was there long before and btw I made a correction about that. I thought it appeared in 2.8 but turns out it was also there in 2.79, potentially before if not forever, so I'm not sure it should be merged with #86033 (I don't know how closely related it has to be for it to be merged).

That said it's not the same bug. The Grab/Rotation/Scale one was there long before and btw I made a correction about that. I thought it appeared in 2.8 but turns out it was also there in 2.79, potentially before if not forever, so I'm not sure it should be merged with #86033 (I don't know how closely related it has to be for it to be merged).
Member

Changed status from 'Duplicate' to: 'Needs Triage'

Changed status from 'Duplicate' to: 'Needs Triage'
Member

Bisecting.

Bisecting.
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Caused by 4c4e8cc926.

Caused by 4c4e8cc926a672ac60692b3fb8c20249f9cae679.
Omar Emara changed title from Viewport Walk Navigation : mouse escapes window if it moves too fast to Regression: Viewport Walk Navigation : mouse escapes window if it moves too fast 2022-11-10 10:56:49 +01:00
Campbell Barton was assigned by Julian Eisel 2022-11-16 17:02:28 +01:00

This issue was referenced by 9fd6dae793

This issue was referenced by 9fd6dae7939a65b67045749a0eadeb6864ded183

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

When looking into a fix for this bug I investigated warping on-the-spot, however this is a bigger change and I wouldn't consider these safe for a bug-fix.

WIP patches D16557: [testing] GHOST/X11: Warp cursor on the spot & D16558: [testing] GHOST/WIN32: Warp cursor on the spot support warping on the spot, however both need some further investigation for reliably detecting when the cursor location has been reset.

When looking into a fix for this bug I investigated warping on-the-spot, however this is a bigger change and I wouldn't consider these safe for a bug-fix. WIP patches [D16557: [testing] GHOST/X11: Warp cursor on the spot](https://archive.blender.org/developer/D16557) & [D16558: [testing] GHOST/WIN32: Warp cursor on the spot](https://archive.blender.org/developer/D16558) support warping on the spot, however both need some further investigation for reliably detecting when the cursor location has been reset.

This issue was referenced by 5d73850dd4

This issue was referenced by 5d73850dd448e1f046c9ac44473efd23dd8cf33c

This issue was referenced by 230744d6fd

This issue was referenced by 230744d6fd96dcf5afe66a8f9b9f6f8bbe1f41bb

This issue was referenced by b87bcd3f8f

This issue was referenced by b87bcd3f8fe132b3cb99e5f17e77d8eca7f73d6f

This issue was referenced by 0240b89599

This issue was referenced by 0240b895994aa58258db6897ae0d6478da7fce5f
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102346
No description provided.