Cleanup: use int32_t type, update comments

Reference WIP patches for warping on the spot, follow up to T102346.